// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testHelpers getDomElement populates a rendered element in the DOM 1`] = `
<body>
  <div
    id="test"
  >
    <p>
      Ipsum lorem
    </p>
  </div>
</body>
`;

exports[`testHelpers getDomElement returns a rendered element 1`] = `
<p>
  Ipsum lorem
</p>
`;

exports[`testHelpers resetDom removes container element from DOM 1`] = `<body />`;

exports[`testHelpers setupDom renders a container element 1`] = `
<body>
  <div
    id="test"
  />
</body>
`;
